--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,6 +4,5 @@ jobs:
     build-app:
         runs-on: ubuntu-latest
         steps:
-            - name: Checkout
-              uses: actions/Checkout@v2
-              run: tree
+            - uses: actions/Checkout@v2
+            - run: tree
