--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,6 +3,15 @@ on: [push]
 jobs:
     build-app:
         runs-on: ubuntu-latest
-        steps:
-            - uses: actions/Checkout@v2
-            - run: tree
+         steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Deploy to Vercel Action
+        uses: BetaHuhn/deploy-to-vercel-action@v1
+        with:
+          uses: amondnet/vercel-action@v20
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.ORGID}}
+          vercel-project-id: ${{ secrets.PROJECTID}}
+          working-directory: ./sub-directory
