--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,7 +1,7 @@
 name: Pipeline Workflow
 on: [push]
 jobs:
-    build-app:
+    deploy-app:
         runs-on: ubuntu-latest
         steps:
           - name: Checkout
